crates/reap-strategy/tests/ui/no_public_hedge_commit.rs
use reap_strategy::ChaosHedgeCommit;

fn main() {}
